--- a/style.css
+++ b/style.css
@@ -32,3 +32,36 @@ h1 {
     }
 }
 
+#loader {
+    visibility:hidden;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid gray;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 1s linear infinite; /* Safari */
+    animation: spin 4s linear infinite;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  #redo {
+    border: none;
+    background-color: white;
+    visibility: hidden;
+    color:blue;
+  }
+
+  #redoContainer {
+    display: flex;
+    flex-direction: row;
+  }
